k8s/overlays/prod/rollout-patch.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: project-acorn
  namespace: project-acorn
  annotations:
    argocd-image-updater.argoproj.io/git-branch: main
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: website
          image: ghcr.io/donhamiltoniii/project-acorn:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
  strategy:
    blueGreen:
      activeService: prod-project-acorn-service-prod
      previewService: prod-project-acorn-preview-service-prod
      trafficRouting:
        traefik:
          weightedTraefikServiceName: prod-project-acorn-traefik-weighted-prod
      autoPromotionEnabled: false
      scaleDownDelaySeconds: 600
